compiler/e2e/test/snapshot/memory_checker/moved_out_in_loop_for_capture/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
warning: the value has been moved inside the loop for closure capture, which could be used in the subsequent iteration
   ╭─ compiler/e2e/test/snapshot/memory_checker/moved_out_in_loop_for_capture/main.pnx:23:9
   │
23 │         do: # the `nonCopyable` is moved here
   │         ^^

error: Compilation aborted due to 1 error(s)



stdout:
